--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
-.body.header{
+body{
+    
+}
 
+.body{
+    
+}
+
+.body.header{
+    background-color: #1f2937 ;
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+}
+
+.body.header .logo{
+    color: white;
+}
+
+a, .body.header{
+    
+    color: white;
+    text-decoration: none;
+}
+
+.body.header .right-links{
+    display: flex;
+    gap: 1em;
+    
 }
