--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body{
 .button{
     color: #F9FAF8;
     background-color: #3882F6;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 img{
@@ -50,7 +57,9 @@ a, .body.header{
 }
 
 .body.one .left{
+    display: flex;
     flex-direction: column;
+    gap: 1em;
 }
 
 .body.one .left .heading{
