--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ img{
     height: auto;
     max-width: 300px;
 }
+
+.image-credit{
+    align-self: flex-end;
+}
 /*-------------------------------------*/
 .body.header{
     background-color: #1f2937 ;
@@ -74,5 +78,8 @@ a, .body.header{
 }
 
 .body.one .right{
+    display: flex;
     flex-direction: column;
-}  
+} 
+
+
