--- a/style.css
+++ b/style.css
@@ -32,19 +32,16 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1em;
     align-items: center;
-    max-width: 200px;
-    max-height:200px;
+    
+    
 }
 
 .card .box{
     border: 2px solid blue;
     border-radius: 25px;
-    min-height: 200px;
-    min-width: 200px;
-    max-width: 200px;
-    max-height: 200px;
+    margin: 1em;
+    
 }
 /*-------------------------------------*/
 .body.header{
@@ -105,6 +102,7 @@ a, .body.header{
 
 .body.two{
     flex-direction: column;
+    padding: 1em;
 }
 
 .body.two .heading{
@@ -113,14 +111,14 @@ a, .body.header{
     font-weight: bolder;
     color:#1F2937;
     justify-content: center;
+    margin-bottom: 2em;
 }
 
 .body.two .cards{
     display: flex;
     gap: 1em;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid pink;
 }
 
-.cards{
-    display:flex;
-    flex: 1;
-}
