--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px yellow solid;
+    
     flex:1;
-    /*currently the cards dont all match in size.  I would like them stay aligned but for now I may just leave a 3 line max rule*/
     
     
 }
@@ -48,12 +47,16 @@ img{
     margin: 1em;
     min-height: 200px;
     min-width: 200px;
+    max-height:200px;
+    max-width: 200px;
     
 }
 
 .card .subtext{
     display: flex;
     
+    text-align: center;
+    max-width: 200px;
     
 }
 /*-------------------------------------*/
@@ -132,6 +135,6 @@ a, .body.header{
     gap: 1em;
     justify-content: center;
     align-items: stretch;
-    border: 2px solid pink;
+    
 }
 
