--- a/style.css
+++ b/style.css
@@ -138,3 +138,17 @@ a, .body.header{
     
 }
 
+/*Quote section*/
+
+.body.three{
+    background-color:#E5E7EB;
+}
+
+.body.three .quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+
+
