--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ a, .body.header{
 /*-------------------------------------*/
 .body.one{
     background-color: #1F2937;
-    gap: 1em;
+    gap: 30em;
+    padding: 2em;
     
 }
 
@@ -97,6 +98,8 @@ a, .body.header{
     display: flex;
     flex-direction: column;
     gap: 1em;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .body.one .left .heading{
@@ -108,6 +111,7 @@ a, .body.header{
 .body.one .left .content{
     font-size: 18px;
     color: #E5E7EB;
+    
 }
 
 .body.one .right{
